# llm-from-scratch

./: .gitignore  README.md  apple_neural.ipynb  chat.ipynb  classifier.ipynb  gpt.ipynb  graded_small_training.lsv  grading_with_ollama.ipynb  model_output.json  openai.ipynb  project_gutenberg.ipynb  pyproject.toml  requirements.txt  training.ipynb
.github/workflows/: deps.yml  detectors.yml
models/: 355M-alpaca.pth
notebooks/: apple_neural.ipynb  chat.ipynb  classifier.ipynb  deepseek.ipynb  gpt.ipynb  graded_355m_alpaca.lsv  grading_with_ollama.ipynb  openai.ipynb  project_gutenberg.ipynb  training.ipynb
script/: gen-py
src/: apple_neural.py  chat.py  classifier.py  deepseek.py  demo.py  gpt.py  grading_with_ollama.py  openai.py  project_gutenberg.py  training.py
