[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "A simple LLM built from scratch in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0,<4.0.0",
    "nvidia-cudnn-cu12>=9",
    "tiktoken>=0.9.0,<0.10.0",
    "torch>=2.7.1,<3.0.0",
    "torchaudio>=2.7.1,<3.0.0",
    "torchvision>=0.22.1,<0.23.0",
]

[tool.uv]
add-bounds = "major"

[dependency-groups]
dev = [
    "jupyter>=1.1.1,<2.0.0",
    "mypy>=1.16.0,<2.0.0",
]
