[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "A simple LLM built from scratch in Python"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
dependencies = [
    "datasets>=3.6.0,<4.0.0",
    "import-ipynb>=0.2,<0.3",
    "ipykernel>=6.29.5,<7.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "mlflow>=3.1.0,<4.0.0",
    "numpy>=2.1.3,<3.0.0",
    "pandas>=2.3.0,<3.0.0",
    "tiktoken>=0.9.0,<0.10.0",
    "torch>=2.7.1,<3.0.0",
    "torchaudio>=2.7.1,<3.0.0",
    "torchvision>=0.22.1,<0.23.0",
    "tqdm>=4.67.1,<5.0.0",
]

[tool.uv]
add-bounds = "major"

[dependency-groups]
dev = [
    "mypy>=1.16.0,<2.0.0",
    "ruff>=0.12.2,<0.13.0",
    "tensorflow>=2.19.0,<3.0.0",
]

apple = [
    "coremltools>=8.3.0,<9.0.0",
]

cuda = [
    "nvidia-cudnn-cu12>=9",
]
